--- a/.env
+++ b/.env
@@ -35,7 +35,7 @@ MAIL_PORT=465
 MAIL_USERNAME=nodawanodtoto@gmail.com
 MAIL_PASSWORD=abdoMaroc123@
 MAIL_ENCRYPTION=ssl
-MAIL_FROM_NAME=Benomar
+MAIL_FROM_NAME=Animal
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
